--- a/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <th>Is Bug</th>
-                <td>{{ entity.isBug }}</td>
+                <td>{{ entity.isBug ? 'Yes' : 'No' }}</td>
             </tr>
             <tr>
                 <th>Commit ID</th>
