--- a/web/css/design.css
+++ b/web/css/design.css
@@ -942,7 +942,7 @@ header div.infos span.notif {
 	font-size: 11px;
 	line-height: 11px;
 }
-.postIt span.taskID {
+.postIt span.taskId {
 	margin: 0px;
 }
 .postIt span.taskTitle {
@@ -969,10 +969,13 @@ header div.infos span.notif {
 	width: 150px;
 }
 
-.bug {
+.taskIcons {
 	position:absolute;
 	top:-3px;
 	left:-3px;
+}
+.taskIcons img {
+	margin-right: 2px;
 }
 
 
