--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
@@ -34,7 +34,7 @@
                 <td>{{ entity.duration }}</td>
                 <td>
                     <a class="edit" href="{{ path('sprint_edit', { 'projectId': projectId, 'sprintId': entity.id }) }}"></a>
-                    <a class="delete" href=""></a>
+                    <a class="delete popupDialog" href="{{ path('sprint_delete', { 'projectId': projectId, 'sprintId': entity.id }) }}"></a>
                 </td>
             </tr>
         {% endfor %}
