--- a/src/CoralScrum/MainBundle/Resources/views/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/index.html.twig
@@ -45,6 +45,69 @@
 {% endblock %}
 
 {% block javascripts %}
-	<script src="{{ asset('js/jquery-1.10.2.min.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/jquery-1.10.2.min.js') }}" type="text/javascript"></script>
+	<script type="text/javascript">
+        function displayPopup(data) {
+            $("body").prepend( '<div class="popupContent"></div>' );
+            $(".popupContent").animate({
+                opacity: 1,
+                }, 500, function() {
+            });
+            $(".popupContent").html(data);
+            initClosePopup();
+        }
+
+        function closePopup() {
+            $(".popupContent").fadeOut(300, function() { $(this).remove(); });
+        }
+
+        function initClosePopup() {
+            $(".popupContent").click(function(e) {
+                if(e.target == this) {
+                    closePopup();
+                }
+            });
+            $(".closePopup").click(function() {
+                closePopup();
+                return false;
+            });
+        }
+
+        function initConfirmedPopup() {
+            $(".popupConfirmed").click(function() {
+                var url = $(this).attr('href');
+                $.post(url)
+                .fail(function() {
+                    alert( "An error has occurred." );
+                })
+                .done(function() {
+                   location.reload();
+                })
+                return false;
+            });
+        }
+
+        function getDialogContent(message, url) {
+            var dialog =  '<div class="dialog">'
+                       +     '<p>'
+                       +         '<img src="{{ asset("img/warning.png") }}" alt="" />'
+                       +         '<span>'+message+'</span>'
+                       +     '</p>'
+                       +     '<div class="clear"></div>'
+                       +     '<a class="button popupConfirmed" href="'+url+'">Ok</a>'
+                       +     '<a class="button closePopup" href="">Cancel</a>'
+                       + '</div>';
+            return dialog;
+        }
+
+        $(".popupDialog").click(function() {
+            var url = $(this).attr('href');
+            var message = 'Are you sure that you want to permanently delete this ?';
+            var dialog = getDialogContent(message, url);
+            displayPopup( dialog );
+            initConfirmedPopup();
+            return false;
+        });
+    </script>
 {% endblock %}
 
