--- a/web/css/design.css
+++ b/web/css/design.css
@@ -351,7 +351,8 @@ a.redButton,
 a.greenButton,
 a.orangeButton,
 a.blueButton ,
-a.violetButton {
+a.violetButton,
+button[type=submit] {
 	margin: 2px;
 	padding: 5px 7px 4px;
 	border-radius: 4px;
@@ -361,13 +362,17 @@ a.violetButton {
 	text-decoration: none;
 	display: inline-block;
 }
-
-a.button {
+button[type=submit]:hover {
+	cursor: pointer;
+}
+a.button,
+button[type=submit] {
 	padding: 6px 7px 5px;
 	background: linear-gradient(to top, #FFBC2D, #FFDE99);
 	border: 1px solid #EBAE41;
 }
-a.button:active {
+a.button:active,
+button[type=submit]:active {
 	background: none;
 	background-color: #FFBC2D;
 }
@@ -991,7 +996,6 @@ header div.infos span.notif {
 	background-color: #FCF7C4;
 	box-shadow: 0 1px 10px rgba(0,0,0,0.25), 0 0 100px rgba(0,0,0,0.1) inset;
 	border-radius: 1%     1%     1%     1% /     1%     1%     1%     1%;
-
 	padding: 5px;
 	word-wrap: break-word;
 	color: #AD7044;
@@ -1032,7 +1036,7 @@ ul.actionButtons li {
 	padding: 6px 7px 5px;
 }
 
-.closePopup {
+.closePopupIcon {
     position:absolute;
     width:24px;
     height:24px;
@@ -1043,10 +1047,47 @@ ul.actionButtons li {
     background-position: center center;
     padding:2px;
 }
-.closePopup:hover {
+.closePopupIcon:hover {
 	border:1px solid #c6c29a;
 	border-radius: 3px;
 	margin-top: -1px;
 	margin-right: -1px;
 	background-color: #ded9ac;
+}
+
+.dialog {
+	position: absolute;
+	left: 50%;
+	margin-left: -150px;
+	top: 25%;
+	width: 300px;
+	color: #000;
+	background-color: #DDD;
+	border-radius: 3px;
+	padding: 15px;
+	text-align: center;
+	word-wrap: break-word;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	border: 1px solid #eee;
+}
+.dialog p {
+	height: 64px;
+	line-height: 64px;
+	padding-bottom: 20px;
+	overflow: auto;
+	height: 64px;
+}
+.dialog img {
+	float: left;
+}
+.dialog span {
+	display: inline-block;
+	vertical-align: middle;
+	width: 220px;
+	margin-left: 10px;
+	font-size: 13px;
+	line-height: 20px;
+}
+.dialog a {
+	margin: 10px 30px;
 }
