Changed date to datetime, implemented UserStory isFinished boolean update on task state change

--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/index.html.twig
@@ -30,7 +30,7 @@
                     {% endfor %}
                     </ul>
                 </td>
-                <td>{% if entity.startDate %}{{ entity.startDate|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if entity.startDate %}{{ entity.startDate|date('Y-m-d H:i') }}{% endif %}</td>
                 <td>{{ entity.duration }}</td>
                 <td>
                     <a class="edit" href="{{ path('sprint_edit', { 'projectId': projectId, 'sprintId': entity.id }) }}"></a>
