--- a/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/show.html.twig
@@ -25,15 +25,15 @@
             </tr>
             <tr>
                 <th>Creation Date</th>
-                <td>{{ entity.creationDate|date('d M Y') }}</td>
+                <td>{{ entity.creationDate|date('d M Y H:i') }}</td>
             </tr>
             <tr>
                 <th>Start Date</th>
-                <td>{% if entity.startDate %}{{ entity.startDate|date('d M Y') }}{% endif %}</td>
+                <td>{% if entity.startDate %}{{ entity.startDate|date('d M Y H:i') }}{% endif %}</td>
             </tr>
             <tr>
                 <th>End Date</th>
-                <td>{% if entity.endDate %}{{ entity.endDate|date('d M Y') }}{% endif %}</td>
+                <td>{% if entity.endDate %}{{ entity.endDate|date('d M Y H:i') }}{% endif %}</td>
             </tr>
             <tr>
                 <th>Assign To</th>
