Profiling: added joins to minimize database requests

--- a/src/CoralScrum/MainBundle/Resources/views/Project/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/show.html.twig
@@ -32,7 +32,7 @@
             <tr>
                 <th>Collaborators</th>
             </tr>
-        {% for userProject in collaborators %}
+        {% for userProject in entity.userproject %}
             <tr>
                 <td>{{ userProject.user }}</td>
             </tr>
