Updated home page and login form

--- a/src/CoralScrum/UserBundle/Resources/views/Resetting/request_content.html.twig
+++ b/src/CoralScrum/UserBundle/Resources/views/Resetting/request_content.html.twig
@@ -1,6 +1,8 @@
+<h1>Reset password</h1>
+
 {% trans_default_domain 'FOSUserBundle' %}
 
-<form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request">
+<form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="fos_user_resetting_request reset">
     <div>
         {% if invalid_username is defined %}
             <p>{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}) }}</p>
