--- a/src/CoralScrum/MainBundle/Resources/views/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/index.html.twig
@@ -3,50 +3,59 @@
 {% block title %}{{ parent() }} - Index{% endblock %}
 
 {% block stylesheets %}
-	<link rel="stylesheet" href="{{ asset('css/design.css') }}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ asset('css/design.css') }}" type="text/css" media="screen" />
 {% endblock %}
 
 {% block body %}
 
-		<header>
-			<div class="container">
-				<div class="logo">
-					{% include "CoralScrumMainBundle:Main:header/logo.html.twig" %}
-				</div>
-				<div id="infos">
-					
-				</div>
-			</div>
-		</header>
-		
-		{% block menu %}
-			
-		{% endblock %}
+        <header>
+            <div class="container">
+                <div class="logo">
+                    {% include "CoralScrumMainBundle:Main:header/logo.html.twig" %}
+                </div>
+                <div class="title">
+                    <h1>Coral Scrum</h1>
+                </div>
+                <div class="infos">
+                    {% include "CoralScrumMainBundle:Main:header/user_infos.html.twig" %}
 
-		<div id="mainContainer">
-			<div class="container">
+                    {% block notification %}
+                    {% endblock %}
+                </div>
+            </div>
+        </header>
+        
+        {% block menu %}
+            
+        {% endblock %}
 
-				{% block container %}
-				<ul class="squareLi">
-					<li><a href="{{ path('fos_user_registration_register') }}">Create an account</a></li>
-					<li><a href="{{ path('fos_user_security_login') }}">Log In</a></li>
-					<li><a href="{{ path('project') }}">View projects</a></li>
-				</ul>
+        <div id="mainContainer">
+            <div class="container">
 
-				{% endblock %}
-			</div>
-			<div class="clear"></div>
-		</div>
+                {% block container %}
 
-		<div id="footer">
-			{% include "CoralScrumMainBundle:Main:footer.html.twig" %}
-		</div>
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                <ul class="squareLi">
+                    <li>
+                        <a href="{{ path('project') }}">View projects</a>
+                    </li>
+                </ul>
+                {% endif %}
+
+                {% endblock %}
+            </div>
+            <div class="clear"></div>
+        </div>
+
+        <div id="footer">
+            {% include "CoralScrumMainBundle:Main:footer.html.twig" %}
+        </div>
 
 {% endblock %}
 
 {% block javascripts %}
     <script src="{{ asset('js/jquery-1.10.2.min.js') }}" type="text/javascript"></script>
-	<script type="text/javascript">
+    <script type="text/javascript">
         function displayPopup(data) {
             $("body").prepend( '<div class="popupContent"></div>' );
             $(".popupContent").animate({
