--- a/src/CoralScrum/UserBundle/Resources/views/layout.html.twig
+++ b/src/CoralScrum/UserBundle/Resources/views/layout.html.twig
@@ -1,76 +1,34 @@
-{% extends "::base.html.twig" %}
+{% extends "CoralScrumMainBundle::index.html.twig" %}
 
-{% block title %}{{ parent() }} - Index{% endblock %}
 
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/design.css') }}" type="text/css" media="screen" />
-{% endblock %}
+{% block container %}
 
-{% block body %}
-
-        <header>
-            <div class="container">
-                <div class="logo">
-                    {% include "CoralScrumMainBundle:Main:header/logo.html.twig" %}
-                </div>
-                <div id="infos">
-                    
-                </div>
-            </div>
-        </header>
-        
-        {#% include "CoralScrumMainBundle:Main:menu.html.twig" %#}
-
-        <div id="mainContainer">
-            <div class="container">
-                {% block container %}
-
-                        <div class="message">
-                            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-                                <a href="{{ path('fos_user_security_logout') }}">
-                                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                                </a>
-                            {% else %}
-                                <!--<a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>-->
-                            {% endif %}
-                        </div>
-
-                        {% for type, messages in app.session.flashbag.all() %}
-                            {% for message in messages %}
-                                <div class="flash-{{ type }}">
-                                    {{ message }}
-                                </div>
-                            {% endfor %}
-                        {% endfor %}
-
-                        <div>
-                            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                            {% else %}
-                                {% block fos_user_content %}
-                                {% endblock fos_user_content %}
-                            {% endif %}
-                        </div>
-
-                {% endblock %}
-            </div>
-            <div class="clear"></div>
+        <div class="message">
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+                <a href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+            {% else %}
+                <!--<a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>-->
+            {% endif %}
         </div>
 
-        <div id="footer">
-            {% include "CoralScrumMainBundle:Main:footer.html.twig" %}
+        {% for type, messages in app.session.flashbag.all() %}
+            {% for message in messages %}
+                <div class="flash-{{ type }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
+        <div>
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+            {% else %}
+                {% block fos_user_content %}
+                {% endblock fos_user_content %}
+            {% endif %}
         </div>
 
 {% endblock %}
-
-{% block javascripts %}
-    <script src="{{ asset('js/jquery-1.10.2.min.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('js/jquery.tablesorter.min.js') }}" type="text/javascript"></script>
-    <script>
-        $(document).ready(function() {
-            $(".tablesorter").tablesorter(); 
-        });
-    </script>
-{% endblock %}
-
 
